# siloprompts

./: .dockerignore  .env.example  .gitignore  404.html  Dockerfile  Makefile  QUICK-START.md  README.md  app.py  docker-compose.yml  index.html  mkdocs.yml  prompt-cli.py  pyproject.toml  requirements.txt  sitemap.xml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
api/: index.html
docker/: index.html
docs/: API.md  QUICK-START.md  docker.md  index.md  kubernetes.md  usage.md  why-siloprompts.md
helm/siloprompts/: Chart.yaml  README.md  values.yaml
helm/siloprompts/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
html_templates/: index.html
kubernetes/: index.html
quick-start/: index.html
search/: search_index.json
src/siloprompts/: __init__.py  __main__.py  cli.py  manager.py  web.py
src/siloprompts/default_prompts/analysis/: data-analysis.md
src/siloprompts/default_prompts/coding/: code-generation.md  code-review.md  debugging.md
src/siloprompts/default_prompts/creative/: brainstorming.md
src/siloprompts/default_prompts/instructions/: behavior-control.md  output-format.md  response-guidelines.md
src/siloprompts/default_prompts/productivity/: planning.md
static/css/: styles.css
static/js/: app.js
tests/: conftest.py  test_api.py  test_prompt_manager.py
usage/: index.html
why-siloprompts/: index.html
(+1 files in other folders)
