[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siloprompts"
version = "1.0.4.post1"
description = "Personal AI prompt database — organize, search, and copy your prompts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "Flask>=3.0",
    "Werkzeug>=3.0",
    "markdown>=3.5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
server = ["gunicorn>=21.0"]
dev = ["pytest>=8.0", "pytest-flask>=1.3"]

[project.scripts]
siloprompts = "siloprompts.cli:main"

[project.urls]
Homepage = "https://siloprompts.com"
Repository = "https://github.com/bdharavathu/siloprompts"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
siloprompts = ["templates/**/*", "static/**/*", "default_prompts/**/*"]
